--- a/src/Components/WeatherApp/WeatherApp.scss
+++ b/src/Components/WeatherApp/WeatherApp.scss
@@ -1,59 +1,59 @@
 .container {
-  width: 607px;
-  height: 829px;
+  width: 500px;
+  height: 580px;
   margin: auto;
-  margin-top: 75px;
-  border-radius: 12px;
-  background-image: linear-gradient(180deg, #130754, #3b2f80);
+  border-radius: 20px;
+  background-image: linear-gradient(#a0d2eb, #7d8085, #494d5f, #8458b3);
+  margin-top: 10px;
 
   .top-bar {
     display: flex;
     justify-content: center;
     gap: 14px;
-    padding-top: 60px;
+    padding-top: 40px;
 
     input {
       display: flex;
-      width: 362px;
-      height: 78px;
+      width: 250px;
+      height: 50px;
       background: #ebfffc;
       border: none;
       outline: none;
-      border-radius: 40px;
-      padding-left: 40px;
+      border-radius: 30px;
+      padding-left: 30px;
       color: #626262;
-      font-size: 20px;
+      font-size: 15px;
       font-weight: 400;
     }
     .search-icon {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 78px;
-      width: 78px;
+      height: 50px;
+      width: 50px;
       background: #ebfffc;
-      border-radius: 40px;
+      border-radius: 50px;
       cursor: pointer;
-      
     }
   }
   .weather-image {
-    margin-top: 29px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
+    height: 80px;
   }
   .weather-temp {
     display: flex;
     justify-content: center;
     color: white;
-    font-size: 120px;
+    font-size: 50px;
     font-weight: 400;
   }
   .weather-location {
     display: flex;
     justify-content: center;
     color: white;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 400;
   }
   .data-container {
@@ -67,13 +67,14 @@
       display: flex;
       align-items: flex-start;
       gap: 12px;
+      margin-top: 20px;
 
       .icon {
         margin-top: 10px;
       }
 
       .data {
-        font-size: 34px;
+        font-size: 24px;
         font-weight: 400;
 
         .text {
@@ -82,5 +83,18 @@
         }
       }
     }
+  }
+  .data-description {
+    margin-top: 30px;
+    color: white;
+    display: flex;
+    justify-content: center;
+  }
+  .copyright {
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+    color: white;
+    border: 1px solid;
   }
 }
